<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_select_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/pet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_select_beatbunny_name"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/pet_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_select_beatbunny_desc"
            android:paddingBottom="12dp" />

        <Button
            android:id="@+id/select_pet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_select_button" />
    </LinearLayout>
</ScrollView>
